<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_account_circle_black_24dp"
            android:layout_margin="20dp"
            android:id="@+id/registerpic"
            android:layout_height="100dp"
            android:contentDescription="@string/profile" />
        <Button
            android:layout_width="wrap_content"
            style="@style/edstyle"
            android:layout_gravity="center"
            android:text="@string/takephoto"
            android:padding="10dp"
            android:onClick="takepic"
            android:background="@color/blue"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/firstname"
            android:inputType="text"
            android:autofillHints="firstname"
            style="@style/edstyle"
            android:hint="@string/firstnamehint"/>
        <EditText
            android:id="@+id/lastname"
            android:inputType="text"
            android:autofillHints="lastname"
            style="@style/edstyle"
            android:hint="@string/lastnamehint"/>
        <EditText
            style="@style/edstyle"
            android:inputType="number"
            android:id="@+id/kodemelli"
            android:autofillHints="kodemelli"
            android:hint="@string/kodehint"/>
        <LinearLayout
            style="@style/edstyle">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/calender"
                style="@style/edstyle"
                android:onClick="opencalenderbirth"
                android:textSize="15sp"
                android:background="@drawable/circle_floating"
                android:layout_height="match_parent"/>
            <TextView
                style="@style/edstyle"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:text="@string/birthdate"
                tools:ignore="NestedWeights" />
        </LinearLayout>
        <LinearLayout
            style="@style/edstyle"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:weightSum="3">
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="birthyear"
                style="@style/edstyle"
                android:inputType="number"
                android:id="@+id/birthyear"
                android:hint="@string/yearhint"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/birthmonth"
                android:autofillHints="birthmonth"
                style="@style/edstyle"
                android:inputType="number"
                android:hint="@string/monthhint"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/birthday"
                android:autofillHints="birthday"
                style="@style/edstyle"
                android:inputType="number"
                android:hint="@string/birthdayhint"/>
        </LinearLayout>
        <EditText
            style="@style/edstyle"
            android:id="@+id/phoneNum"
            android:inputType="phone"
            android:autoLink="phone"
            android:autofillHints="phone"
            android:hint="@string/phonenumhint"/>
        <EditText
            android:id="@+id/homeNum"
            style="@style/edstyle"
            android:inputType="phone"
            android:autofillHints="phone"
            android:hint="@string/homenumhint"/>
        <EditText
            android:id="@+id/dadNum"
            style="@style/edstyle"
            android:inputType="phone"
            android:autofillHints="phone"
            android:hint="@string/dadnumhint"/>
        <Spinner
            android:layout_width="match_parent"
            android:entries="@array/job"
            android:layout_margin="20dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/category"
            android:layout_height="50dp"/>
        <EditText
            style="@style/edstyle"
            android:id="@+id/job"
            android:inputType="text"
            android:autofillHints="job"
            android:hint="@string/jobhint"/>
        <EditText
            android:id="@+id/grade"
            android:inputType="text"
            android:autofillHints="grade"
            style="@style/edstyle"
            android:hint="@string/gradehint"/>
        <EditText
            style="@style/edstyle"
            android:id="@+id/reshte"
            android:inputType="text"
            android:autofillHints="reshte"
            android:hint="@string/reshtehint"/>
        <EditText
            style="@style/edstyle"
            android:inputType="text"
            android:autofillHints="educationplace"
            android:id="@+id/educationplace"
            android:hint="@string/eduplacehint"/>
        <EditText
            style="@style/edstyle"
            android:id="@+id/address"
            android:inputType="text"
            android:autofillHints="address"
            android:hint="@string/addresshint"/>
        <LinearLayout
            style="@style/edstyle"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="4">
            <CheckBox
                style="@style/checkbox"
                android:id="@+id/heyAtreg"
                android:text="@string/heyAt"/>
            <CheckBox
                style="@style/checkbox"
                android:id="@+id/shakhereg"
                android:text="@string/shakhe"/>
            <CheckBox
                style="@style/checkbox"
                android:id="@+id/familyreg"
                android:text="@string/family"/>
            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                style="@style/edstyle"
                android:hint="@string/join"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />
        </LinearLayout>
        <EditText
            style="@style/edstyle"
            android:id="@+id/coach"
            android:inputType="text"
            android:autofillHints="coach"
            android:hint="@string/coachhint"/>
        <EditText
            style="@style/edstyle"
            android:id="@+id/responsibility"
            android:inputType="text"
            android:autofillHints="responsibility"
            android:hint="@string/reshint"/>
        <LinearLayout
            style="@style/edstyle"
            android:layout_height="100dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/calender"
                style="@style/edstyle"
                android:onClick="opencalenderreg"
                android:textSize="15sp"
                android:background="@drawable/circle_floating" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/regyear"
                style="@style/edstyle"
                android:inputType="date"
                android:autofillHints="yearreg"
                android:hint="@string/yearhint"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/regmonth"
                android:autofillHints="monthreg"
                style="@style/edstyle"
                android:inputType="number"
                android:hint="@string/monthhint"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/edstyle"
                android:textSize="20sp"
                android:text="@string/joindate"/>
        </LinearLayout>
        <EditText
            style="@style/edstyle"
            android:id="@+id/familycome"
            android:inputType="text"
            android:autofillHints="familycome"
            android:hint="@string/familycome"/>
        <EditText
            style="@style/edstyle"
            android:inputType="text"
            android:autofillHints="whoinvitesu"
            android:id="@+id/whoinvitesyou"
            android:hint="@string/whoinvitesu"/>
        <EditText
            style="@style/edstyle"
            android:inputType="number"
            android:id="@+id/invitenum"
            android:autofillHints="@string/invitenum"
            android:hint="@string/invitenum"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            style="@style/edstyle"
            android:hint="@string/ability"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:orientation="vertical"
            android:weightSum="4">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="3"
                android:layout_margin="20dp"
                android:orientation="horizontal">
                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/football"
                    android:text="@string/football"/>
                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/volleyball"
                    android:text="@string/volleyball"/>
                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/basketball"
                    android:text="@string/basketball"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="3"
                android:layout_margin="20dp"
                android:orientation="horizontal">
                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/pingpong"
                    android:text="@string/pingpong"/>
                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/quran"
                    android:text="@string/readquran"/>
                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/memorize"
                    android:text="@string/memoriza"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="3"
                android:layout_margin="20dp"
                android:orientation="horizontal">
                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/computer"
                    android:text="@string/computer"/>
                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/sing"
                    android:text="@string/sing"/>
                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/art"
                    android:text="@string/art"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="3"
                android:layout_margin="20dp"
                android:orientation="horizontal">
                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/photography"
                    android:text="@string/photography"/>
                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/other"
                    android:text="@string/other"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            style="@style/edstyle"
            android:hint="@string/active"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="3"
                android:layout_margin="20dp"
                android:orientation="horizontal">
                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/insta"
                    android:text="@string/insta"/>
                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/telegram"
                    android:text="@string/telegram"/>
                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/whatsapp"
                    android:text="@string/whatsapp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="3"
                android:layout_margin="20dp"
                android:orientation="horizontal">
                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/rubika"
                    android:text="@string/rubika"/>
                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/soroush"
                    android:text="@string/soroush"/>
                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/facebook"
                    android:text="@string/facebook"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="3"
                android:layout_margin="20dp"
                android:orientation="horizontal">
                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/Ita"
                    android:text="@string/ita"/>
                <CheckBox
                    style="@style/checkbox"
                    android:id="@+id/tweeter"
                    android:text="@string/tweeter"/>
                <CheckBox
                    android:id="@+id/bale"
                    style="@style/checkbox"
                    android:text="@string/bale"/>
            </LinearLayout>
        </LinearLayout>
        <EditText
            android:id="@+id/describe"
            style="@style/edstyle"
            android:inputType="text"
            android:autofillHints="@string/describe"
            android:hint="@string/describe"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textStyle="bold"
            android:text="@string/register"
            android:onClick="register"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_green_dark"
            style="@style/edstyle">
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textStyle="bold"
            android:text="@string/cancel"
            android:onClick="cancelregister"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_dark"
            style="@style/edstyle">
        </Button>
    </LinearLayout>
</ScrollView>