<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        style="@style/edstyle">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/calender"
            style="@style/edstyle"
            android:id="@+id/alertopencal"
            android:textSize="15sp"
            android:background="@drawable/circle_floating"
            android:layout_height="match_parent"/>
        <TextView
            style="@style/edstyle"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:text="@string/date"/>
    </LinearLayout>
    <LinearLayout
        style="@style/edstyle"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:weightSum="3">
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="birthyear"
            style="@style/edstyle"
            android:inputType="number"
            android:id="@+id/alertcalyear"
            android:hint="@string/yearhint"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/alertcalmonth"
            android:autofillHints="birthmonth"
            style="@style/edstyle"
            android:inputType="number"
            android:hint="@string/monthhint"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/alertcalday"
            android:autofillHints="birthday"
            style="@style/edstyle"
            android:inputType="number"
            android:hint="@string/birthdayhint"/>
    </LinearLayout>
    <EditText
        android:inputType="text"
        android:hint="@string/describe"
        android:id="@+id/alertnote"
        android:autofillHints="@string/describe"
       style="@style/edstyle"/>
    <LinearLayout
        style="@style/edstyle">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/create"
            style="@style/edstyle"
            android:id="@+id/alertcreatemeeting"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:background="@android:color/holo_green_dark"
            android:layout_height="match_parent"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="@style/edstyle"
            android:layout_margin="10dp"
            android:id="@+id/alertcancelmeeting"
            android:textSize="15sp"
            android:background="@android:color/holo_red_dark"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>