<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainPage">
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:text="@string/register"
        android:onClick="gotoregisterclient"
        android:textSize="30sp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:text="@string/list"
        android:onClick="gotolist"
        android:textSize="30sp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:text="@string/meetinglistandappsent"
        android:onClick="gotomeeting"
        android:textSize="30sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_height="100dp">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="coachnum"
            android:layout_margin="5dp"
            android:text="@string/coachnum"
            android:textSize="18sp"
            android:background="@drawable/circle_floating"
            android:layout_height="match_parent"
            style="@style/edstyle"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:onClick="restoast"
            android:text="@string/reshint"
            style="@style/edstyle"
            android:background="@drawable/circle_floating"
            android:layout_height="match_parent"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            style="@style/edstyle"
            android:onClick="clientnum"
            android:textSize="18sp"
            android:text="@string/clientnum"
            android:background="@drawable/circle_floating"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>