<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <EditText
        style="@style/edstyle"
        android:inputType="text"
        android:id="@+id/alertsearchrollcallfirstname"
        android:autofillHints="@string/firstnamehint"
        android:hint="@string/firstnamehint"/>
    <EditText
        style="@style/edstyle"
        android:inputType="text"
        android:id="@+id/alertsearchrollcalllastname"
        android:autofillHints="@string/lastnamehint"
        android:hint="@string/lastnamehint"/>
    <EditText
        style="@style/edstyle"
        android:inputType="number"
        android:id="@+id/alertsearchrollcallkode"
        android:autofillHints="@string/kodehint"
        android:hint="@string/kodehint"/>
    <Spinner
        style="@style/edstyle"
        android:entries="@array/listgroup"
        android:id="@+id/spinnersearchrollcallalert"/>
    <LinearLayout
        style="@style/edstyle"
        android:layout_height="90dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/search"
            android:textSize="20sp"
            android:id="@+id/alertrollcallsearch"
            style="@style/edstyle"
            android:background="@color/greenmeeting"
            android:layout_weight="1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/cancelfilter"
            android:id="@+id/alertrollcallcancel"
            android:textSize="12sp"
            style="@style/edstyle"
            android:background="@color/redmeeting"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>